--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   theme_manager: ^1.1.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
