add first api call

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sal:
+    path: packages/sal
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
